...
                        }
                    },
                    modifier = Modifier,
                ) {
                    Icon(
                        imageVector = Icons.Filled.ArrowBack,
                        contentDescription = "Log Back Arrow",
                    )
                }
            }
        }

        Column(
...
            Text(
                text = date.format(DateTimeFormatter.ofLocalizedDate(FormatStyle.FULL)),
                fontWeight = FontWeight.Bold,
                textAlign = TextAlign.Center,
                fontSize = 14.scaledSp(),
                modifier = Modifier
                    .testTag("DateLabel")
                    .semantics { contentDescription = "DateLabel" },
                color = appViewModel.colorPalette.MainFontColor
            )
        }

        Column(
...
                .height(40.dp),
        ) {
            Text(
                text = "Save",
                textAlign = TextAlign.Center,
                modifier = Modifier
                    .semantics { contentDescription = "Save Button" },
                color = Color.Black,
            )
        }
    }
}

...
