<resources>
    <string name="app_name">Menstruation Nation</string>
    <string name="welcome">Welcome!</string>
    <string name="quick_start">Quick Start</string>
    <string name="apple_start">Sign in with Apple</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="question_one">How long does your period usually last?</string>
    <string name="description_one">This will help us make our reminders more accurate.</string>
    <string name="tap_to_input">Tap to input</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="notes_description">Record a symptom or make a note</string>
    <string name="question_two">When did your period last start?</string>
    <string name="description_two">Record your last period or skip if you do not know.</string>
    <string name="choose_date">Choose date</string>
    <string name="question_three">What symptoms do you want to track?</string>
    <string name="description_three">You can change these anytime in yours settings.</string>
    <string name="caption_three">By default, we will always track your period flow. Choose up to five other symptoms to track.</string>
    <string name="mood">Mood</string>
    <string name="exercise">Exercise</string>
    <string name="cramps">Cramps</string>
    <string name="sleep">Sleep</string>
    <string name="ovulation">Ovulation</string>
    <string name="flow">Flow</string>
    <string name="notes">Notes</string>
    <string name="order_details">Average period length: %1$s \n Last period: %2$s \nSymptoms to log: %3$s</string>
    <string name="average_period_length">Average period length</string>
    <string name="last_period">Last period</string>
    <string name="symptoms_to_log">Symptoms to log</string>
    <string name="new_account">New Account</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="back_button">Back</string>
    <plurals name="period_length">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="log_to_learn">Please start logging to learn more.</string>
    <string name="current_cycle">Current cycle</string>
    <string name="period_history">Period History</string>
    <string name="avg_period_len">Average period length</string>
    <string name="avg_cycle_len">Average cycle length</string>
    <string name="avg_ovulation_len">Average ovulation length</string>
    <string name="fab_to_calender">Average cycle length</string>
    <string name="show_more">Show More ></string>
    <string name="log_multiple_dates_header_title">Tap date to log period</string>
    <string name="log_multiple_dates_header_body">Selected dates will have their Flow level set to Medium</string>

    <string name="period_flow">Period Flow</string>
    <string name="expand_button_symptoms_content_description">Expand to switch symptoms</string>
    <string name="fab_to_calendar">Navigate to Calendar page</string>
    <string name="fab_see_log_options">Open logging options</string>

    <string name="tracking_preferences">Tracking Preferences</string>
    <string name="notifications_heading">Notifications</string>
    <string name="personalization_heading">Personalizations</string>
    <string name="account_settings_heading">Account settings</string>
    <string name="toggle_color">Dark Mode</string>
    <string name="remind_me_to_log_symptoms">Remind me to log symptoms</string>
    <string name="customize_notifications">Customise Notifications</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="repeat">Repeat</string>
    <string name="back_up_account">Back Up Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="reset_database">Reset Database</string>
    <string name="back_up_database">Back Up Database</string>
    <string name="confirm_back_up">Confirm Back Up</string>
    <string name="settings_home">Settings</string>
    <string name="reminder_description">We\'ll remind you to log your symptoms.</string>
    <string name="copyright">© 2023 The Period Purse. All rights reserved.</string>
    <string name="please_start_logging_to_learn_more">Please start logging to learn more</string>
    <string name="back_button_label">Back Button</string>
    <string name="product_image_description">%s Image</string>
    <string name="tap_to_learn_more">Tap to learn more about period products.</string>
    <string name="did_you_know">Did you know?</string>
    <string name="paddy">Paddy</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">YouTube</string>
    <string name="tiktok">TikTok</string>
    <string name="instagram">Instagram</string>
    <string name="learn_more">Learn more about The Period Purse</string>
    <string name="strives_to_achieve_short">The Period Purse strives to achieve menstrual equity by providing people who menstruate with access to free menstrual products, and to reduce the stigma surrounding periods through public education and advocacy.</string>
    <string name="strives_to_achieve">The Period Purse strives to achieve menstrual equity by providing people who menstruate with access to free menstrual products, and to reduce the stigma surrounding periods through public education and advocacy.
        \n\nWith the help of UofT Blueprint from the University of Toronto, we have developed this app to enable you to keep track of your periods and provide you with useful information.
        \n\nWe understand that recording intimate information about your body in an app can be scary. Who can access this information? How will it be used? Is it well protected?
        \n\nThis is why we build this app with your privacy first in mind. Contrary to other period tracking apps, with your Period Purse app, no one but you can access any of the information you provide. This document provides you with more information about how this works and answers some commonly asked questions.
        \n\nYou can also always reach out at hello@periodpurse.com if you cannot find what you are looking for.</string>
    <string name="calendar">Calendar</string>
    <string name="calendar_page">Calendar Page</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="what_do_we_do_with_your_information">What do we do with your information?</string>
    <string name="no_personal_info_access">Nothing! Nor the Period Purse, nor any other organization, can access your personal information.</string>
    <string name="did_you_get_my_consent">Did you get my consent?</string>
    <string name="consent_response">We did not ask for your consent, because we do not want your data. Your data is yours and yours only.</string>
    <string name="did_you_collect_my_data">Did you collect my data?</string>
    <string name="data_collection_response">
        We do not collect your data in any way. Your data is either stored locally on-device or backed up to Google Drive.
        \n\nIn the case of on-device storage, the data is only processed locally and not transmitted off-device.
        \n\nIn the case of storing in Google Drive, we will use Google Drive API and OAuth to achieve end-to-end encryption, and store your data in a hidden, application-specific folder such that no parties, including you or any other application, can access it. The only way you can access this data is when you sign into Menstruation Nation with your Google Account. At any time, you can uninstall Menstruation Nation to delete the backed-up data in Google Drive.
    </string>
    <string name="do_you_share_my_information_with_anyone">Do you share my information with anyone?</string>
    <string name="information_sharing_response">
        We do not disclose your data to any third party. We could not if we wanted to since we do not have it! All the data that you add to the app to keep track of your periods and your health is stored locally, on your phone, with one exception.
        We wanted you to be able to transfer your data from one device to another in case you change phones, so that you do not lose your history. To make sure this would not jeopardize your privacy, we created an optional feature that enables you to connect your Google account to your app and download all your data to your Google Drive. Upon request, data goes straight from the app to your Google account. You can then access it by logging into Menstruation Nation on your new device.
        Once your data is in your Google Drive, the Google privacy policy applies. We invite you to read it if you have any questions on how Google protects your information. The app also includes some links to social media pages. If you click those links, these pages\' privacy policy applies.
    </string>
    <string name="is_my_information_protected">Is my information protected?</string>
    <string name="information_protected_response">We built this app so that you would feel comfortable tracking your periods on your phone. Not accessing it is the best way for us to protect it.</string>
    <string name="i_am_underage_can_i_use_this_app">I am underage. Can I use this app?</string>
    <string name="under_age_response">From a privacy standpoint, you can use this app whichever your age is, because your data stays with you.</string>
    <string name="changes_to_this_privacy_policy">Changes to this privacy policy.</string>
    <string name="policy_update_response">If any of the above were to change, we will update this document to inform you.</string>
    <string name="questions_and_contact_information">Questions and contact information</string>
    <string name="contact">Any question? Just email us: hello@periodpurse.com.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition_open">
        These terms and conditions (the "Terms and Conditions") govern the use of www.theperiodpurse.com (the "Site"). This Site is owned and operated by The Period Purse. This Site is a news or media website.
        \nBy using this Site, you indicate that you have read and understand these Terms and Conditions and agree to abide by them at all times.</string>
    <string name="intellectual_property">Intellectual Property</string>
    <string name="intellectual_property_details">All content published and made available on our Site is the property of The Period Purse and the Site\'s creators. This includes, but is not limited to images, text, logos, documents, downloadable files, and anything that contributes to the composition of our Site.</string>
    <string name="accounts">Accounts</string>
    <string name="account_details">When you create an account on our Site, you agree to the following:
        \n\t 1. You are solely responsible for your account and the security and privacy of your account, including passwords or sensitive information attached to that account.
        \n\t 2. All personal information you provide to us through your account is up to date, accurate, and truthful, and that you will update your personal information if it changes.
        \nWe reserve the right to suspend or terminate your account if you are using our Site illegally or if you violate these Terms and Conditions.
    </string>
    <string name="limitation_of_liability">Limitation of Liability</string>
    <string name="limitation_of_liability_details">The Period Purse and our directors, officers, agents, employees, subsidiaries, and affiliates will not be liable for any actions, claims, losses, damages, liabilities, and expenses, including legal fees, arising from your use of the Site.</string>
    <string name="indemnity">Indemnity</string>
    <string name="indemnity_details">Except where prohibited by law, by using this Site, you indemnify and hold harmless The Period Purse and our directors, officers, agents, employees, subsidiaries, and affiliates from any actions, claims, losses, damages, liabilities, and expenses, including legal fees, arising out of your use of our Site or your violation of these Terms and Conditions.</string>
    <string name="applicable_law">Applicable Law</string>
    <string name="applicable_law_details">"These Terms and Conditions are governed by the laws of Canada. The Period Purse headquarters is in Ontario. "</string>
    <string name="severability">Severability</string>
    <string name="severability_details">If at any time any of the provisions set forth in these Terms and Conditions are found to be inconsistent or invalid under applicable laws, those provisions will be deemed void and will be removed from these Terms and Conditions. All other provisions will not be affected by the removal, and the rest of these Terms and Conditions will still be considered valid.</string>
    <string name="terms_conditions_changes">Changes</string>
    <string name="terms_conditions_changes_details">These Terms and Conditions may be amended from time to time in order to maintain compliance with the law and to reflect any changes to the way we operate our Site and the way we expect users to behave on our Site. We will notify users by email of changes to these Terms and Conditions or post a notice on our Site.</string>
    <string name="contact_details_string">Contact Details</string>
    <string name="contact_details">
        Please contact us if you have any questions or concerns. Our contact details are as follows:
        \nEmail: hello@theperiodpurse.com
        \nAddress: 1460 The Queensway, Toronto, Ontario, M8S 1S7
        \nYou can also contact us through the feedback form available on our Site.
    </string>
    <string name="terms_conditions_effective_date">Effective Date: 14th day of April, 2022</string>
    <string name="day_flow_icon_content_decription">DateFlowIcon</string>
    <string name="cycle_page">Cycle Page</string>
    <string name="days_since">Days since</string>
</resources>