...
                verticalAlignment = Alignment.Bottom,
                modifier = Modifier
                    .clickable(enabled = false) {}
                    .padding(start = 5.dp, end = 5.dp, bottom = 10.dp),
            ) {
                LoggingOptionButton(
                    title = "Log daily symptoms",
                    icon = R.drawable.water_drop_black_24dp,
                    onClick = {
                        onLogDailySymptomsClick()
                        onExit()
                    },
                    appViewModel = appViewModel
...
