...
                id = selectedSymptom.resourceId,
            ),
            tint = appViewModel.colorPalette.MainFontColor,
            contentDescription = selectedSymptom.name,
            modifier = Modifier
                .padding(end = 0.dp)
                .testTag("Selected Symptom"),
        )
        SwitchSymptomButton(
            expanded = expanded,
            onClick = onExpandButtonClick,
        )
    }
...
